# ads-browser

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/ads_browser/: __main__.py  browser.py  widget_connect.py  widget_manage.py  widget_tree.py  widget_tree_item.py
