[project]
name = "ads-browser"
version = "0.1.0"
description = "Browser to remote ADS variables"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyads>=3.5.2",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
